src/test/ui/generics/issue-59508-1.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/issue-59508-1.rs:10:25
   |
LL |     pub fn do_things<T, 'a, 'b: 'a>() {
   |                     ----^^--^^----- help: reorder the parameters: lifetimes, then consts and types: `<'a, 'b: 'a, T>`

error: aborting due to previous error

